--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -38,8 +38,8 @@
 
         - name: Tag Docker image
           run: | 
-            docker tag my-spring-boot-app:latest ${{ secrets.DOCKER_USERNAME }}/my-spring-boot-app:1  
+            docker tag my-spring-boot-app:latest ${{ secrets.DOCKER_USERNAME }}/my-spring-boot-app:v1.0.0
 
     # Push the Docker image to Docker Hub
         - name: Push Docker image
-          run: docker push ${{ secrets.DOCKER_USERNAME }}/my-spring-boot-app:1
+          run: docker push ${{ secrets.DOCKER_USERNAME }}/my-spring-boot-app:v1.0.0
