--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -34,11 +34,11 @@
 
         # Build the Docker image
         - name: Build Docker image
-          run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-spring-boot-app:latest .
+          run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/my-spring-boot-app:latest .
 
         - name: Tag Docker image
           run: | 
-           docker tag ${{ secrets.DOCKER_USERNAME }}/my-spring-boot-app:latest ${{ secrets.DOCKER_USERNAME }}/my-spring-boot-app:v1.0.0
+           docker tag ${{ secrets.DOCKER_HUB_USERNAME }}/my-spring-boot-app:latest ${{ secrets.DOCKER_HUB_USERNAME }}/my-spring-boot-app:v1.0.0
 
 
     # Push the Docker image to Docker Hub
