--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -18,16 +18,16 @@
             distribution: 'corretto'
             java-version: 17
 
-        - name: unit tests
-          run: mvn -B test --file pom.xml
+        #- name: unit tests
+        #  run: mvn -B test --file pom.xml
          
-        - name: build the app
-          run: |
-            mvn clean install -DskipTests
-            mvn -B package --file pom.xml
+        #- name: build the app
+        #  run: |
+        #    mvn clean install -DskipTests
+        #    mvn -B package --file pom.xml
             
-        - name: List target directory contents
-          run: ls -la target/     
+        #- name: List target directory contents
+        #  run: ls -la target/     
 
         - name: login to docker hub
           uses: docker/login-action@v1
@@ -42,3 +42,5 @@
           with:
             push: true
             tags: ${{ secrets.DOCKER_HUB_USERNAME }}/my-spring-boot-app:v1.0.0   
+
+             
