--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -37,7 +37,7 @@
 
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v3
-        - name: Push
+        - name: Build and Push
           uses: docker/build-push-action@v6
           with:
             push: true
